# skeleton_cmake_gtest_gcov

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
cmakemodules/: CodeCoverage.cmake
somelib/: CMakeLists.txt  somelib.cpp  somelib.hpp
tests/: CMakeLists.txt
tests/somelibtest/: CMakeLists.txt  somelibtest.cpp
